ThreadIdTable::grow() invokes invalid thread transition

XMLWordPrintable

      Stack: [0xfffffffef0c00000,0xfffffffef0d00000], sp=0xfffffffef0cfdbf0, free space=1014k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x20a3014] void VMError::report_and_die(int,const char*,const char*,void*,Thread*,unsigned char*,void*,void*,const char*,int,unsigned long)+0xb14
      V [libjvm.so+0x20a2498] void VMError::report_and_die(Thread*,void*,const char*,int,const char*,const char*,void*)+0x38
      V [libjvm.so+0x13f1c58] void report_fatal(const char*,int,const char*,...)+0x88
      V [libjvm.so+0x1fc5ed8] void Thread::check_possible_safepoint()+0x78
      V [libjvm.so+0xfc4ee8] void ThreadStateTransition::transition(JavaThread*,JavaThreadState,JavaThreadState)+0xc8
      V [libjvm.so+0x1fd9c3c] void ThreadIdTable::grow(JavaThread*)+0x21c
      V [libjvm.so+0x1fda1e0] JavaThread*ThreadIdTable::add_thread(long,JavaThread*)+0x120
      V [libjvm.so+0x1fd42fc] void Threads::add(JavaThread*,bool)+0x18c
      V [libjvm.so+0x1fcfae8] void JavaThread::prepare(_jobject*,ThreadPriority)+0x598
      V [libjvm.so+0x18e3d80] JVM_StartThread+0x410

            Assignee:
            Daniil Titov (Inactive)
            Reporter:
            Markus Grönlund
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: