8231666: ThreadIdTable::grow() invokes invalid thread transition

Reviewed-by: dholmes, rehn